# tentrillion-game-engine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
include/: BaseService.hpp  LoggingSystem.hpp  Main.hpp  TenBaseService.hpp  TenTrillionGameEngine.hpp  tentrillion-game-engine.hpp
include/additional/: TenString.hpp
include/handlers/: TenEngineConfiguration.hpp  TenEngineErrorHandler.hpp  TenLoggingSystem.hpp
include/lib/: tentrillion.hpp
include/lib/services/: renderingService.hpp
include/rendering/: RenderingService.hpp  TenRenderingService.hpp  TenWindow.hpp
include/rendering/tengl/: TenGL.hpp
include/rendering/vulkano/: Vulkano.hpp  VulkanoDeviceManager.hpp  VulkanoDeviceProperties.hpp
src/: LoggingSystem.cpp  Main.cpp  TenTrillionGameEngine.cpp  tentrillion-game-engine.cpp
src/additional/: TenString.cpp
src/handlers/: TenEngineConfiguration.cpp  TenEngineErrorHandler.cpp  TenLoggingSystem.cpp
src/lib/: CMakeLists.txt
src/lib/services/: renderingService.cpp
src/rendering/: RenderingService.cpp  TenRenderingService.cpp  TenWindow.cpp
src/rendering/tengl/: TenGL.cpp
src/rendering/vulkano/: Vulkano.cpp  VulkanoDeviceManager.cpp
test/: CMakeLists.txt  README.md
test/src/: Main.cpp  TenTrillionGameEngine.cpp
